--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Grupo Ada</h1>
+<p>Se você estiver lendo esta mensagem, então nosso site está na internet</p>
 </body>
 </html>
