adicionado template millenial
https://jekyllthemes.io/theme/millennial

--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Grupo Ada</h1>
-<p>Se você estiver lendo esta mensagem, então nosso site está na internet</p>
-</body>
-</html>
+---
+layout: home
+title: Home
+---
